--- a/vercel.json
+++ b/vercel.json
@@ -6,19 +6,10 @@
     {
       "source": "/api/:path*",
       "destination": "/api/index.ts"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/index.ts"
     },
     {
-      "handle": "filesystem"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
